--- a/NLW Origin/index.html
+++ b/NLW Origin/index.html
@@ -7,21 +7,40 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1>beautysalon.</h1>
-      <div>...</div>
+    <header id="header">
+      <nav class="container">
+        <a class="logo" href="#">beautys<span>salon</span>.</a>
+        <div class="menu">...</div>
+      </nav>
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+        rel="stylesheet"
+      />
     </header>
 
     <main>
-      <section>
-        <img src="" alt="" />
+      <section class="section" id="home">
+        <div class="container grid">
+          <div class="image">
+            <img src="assets/img/mulhercabelo.png" alt="" />
+          </div>
+          <div class="text">
+            <h1>Saúde natural para os seus cabelos</h1>
+            <p>
+              Um salão exclusivo em São Paulo, especializado em tratamentos
+              naturais.
+            </p>
+            <a class="button" href="#">Agendar um horário</a>
+          </div>
+        </div>
+      </section>
 
-        <h1>Saúde natural para os seus cabelos</h1>
-        <p>
-          Um salão exclusivo em São Paulo, especializado em tratamentos
-          naturais.
-        </p>
-        <a href="#">Agendar um horário</a>
+      <div class="divider-1"></div>
+
+      <section class="section">
+        <div class="container">outra section</div>
       </section>
     </main>
   </body>
