--- a/NLW Origin/index.html
+++ b/NLW Origin/index.html
@@ -52,11 +52,82 @@
       <div class="divider-1"></div>
 
       <section class="section" id="about">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="assets/img/cortandocabelo.png"
+              alt="mulher cortando cabelo"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
+              mollitia consequatur maxime quis! Qui illum fugiat natus quaerat.
+              Dolorem magni perferendis hic aperiam recusandae numquam quasi
+              maxime id facilis voluptas.
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+              obcaecati libero laborum, quaerat culpa quidem non atque quia
+              dignissimos quas autem animi illum aliquam dolorem odio porro
+              modi, possimus assumenda.
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed
+              consectetur doloribus eveniet impedit, beatae minima possimus
+              exercitationem, amet similique vel id distinctio saepe. Animi, et
+              rerum in excepturi sit mollitia!
+            </p>
+          </div>
+        </div>
       </section>
 
+      <div class="divider-2"></div>
+
       <section class="section" id="services">
-        <div class="container grid">Services</div>
+        <div class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima
+              molestiae, amet laborum, recusandae officia autem ducimus
+              inventore ipsa sed accusamus, sunt asperiores quae! Sit quam
+              ratione culpa necessitatibus, facere maxime.
+            </p>
+          </header>
+          <div class="cards grid">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
+              <h3 class="title">Terapia Capila</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia suscipit quae et deleniti vero similique asperiores
+                illo.
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-trim"></i>
+              <h3 class="title">Cortes</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia suscipit quae et deleniti vero similique asperiores
+                illo.
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
+              <h3 class="title">Tratamentos</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia suscipit quae et deleniti vero similique asperiores
+                illo.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <script src="main.js"></script>
