--- a/Discover/index.html
+++ b/Discover/index.html
@@ -7,6 +7,6 @@
     <title>Function</title>
   </head>
   <body>
-    <script src="function.js"></script>
+    <script src="function_2.js"></script>
   </body>
 </html>
