--- a/Discover/index.html
+++ b/Discover/index.html
@@ -7,6 +7,8 @@
     <title>Function</title>
   </head>
   <body>
-    <script src="function_2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <script src="axios.js"></script>
   </body>
 </html>
