--- a/Discover/index.html
+++ b/Discover/index.html
@@ -9,6 +9,6 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <script src="axios.js"></script>
+    <script src="async_axios.js"></script>
   </body>
 </html>
