--- a/Origamid/Javascript/Variaveis/index.html
+++ b/Origamid/Javascript/Variaveis/index.html
@@ -7,6 +7,7 @@
     <title>Variaveis</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
+    <script src="exercicio.js"></script>
   </body>
 </html>
