--- a/Origamid/OldJs/Tipos de Dados/index.html
+++ b/Origamid/OldJs/Tipos de Dados/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tipo de Dados</title>
+    <title>Tipos de Dados</title>
   </head>
   <body>
-    <script src="index.js"></script>
-    <script src="exercicio.js"></script>
+    <script src="script-aula.js"></script>
+    <script src="exercicio-aula.js"></script>
   </body>
 </html>
