--- a/Origamid/Javascript/Fetch/index.html
+++ b/Origamid/Javascript/Fetch/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetch</title>
+    <title>Constructor Functions</title>
   </head>
   <body>
-    <h1>Descubra seu Endereço com o CEP</h1>
-    <input class="inputvalor" type="number" />
-    <button onclick="pesquisar()">Pesquisar</button>
-    <div class="container"></div>
     <script src="index.js"></script>
     <script src="exercicio.js"></script>
   </body>
