--- a/Origamid/React/index.html
+++ b/Origamid/React/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React para Iniciantes</title>
     <script
@@ -34,7 +34,7 @@
       const App = () => {
         return (
           <div>
-            Meu App
+            Meu App 2
             <Button />
           </div>
         );
