studies js day 11

--- a/B7Web/Javascript Novo/Dom/Selecionando Elementos/index.html
+++ b/B7Web/Javascript Novo/Dom/Selecionando Elementos/index.html
@@ -9,6 +9,16 @@
 <body>
 <h1>Olá, Javascript</h1>
 
+<div id="teste">
+<ul>
+  <li>Item da lista 1</li>
+  <li>Item da lista 2</li>
+</ul>
+</div>
+
+<button class="botao" onclick="clicou()">Adicionar item a lista</button>
+
+
 <script src="script.js"></script>
 </body>
 </html>
