studies js day 12

--- a/B7Web/Javascript Novo/Dom/Selecionando Elementos/index.html
+++ b/B7Web/Javascript Novo/Dom/Selecionando Elementos/index.html
@@ -9,6 +9,8 @@
 <body>
 <h1>Olá, Javascript</h1>
 
+<input type="text" placeholder="Digite a sua tarefa">
+
 <div id="teste">
 <ul>
   <li>Item da lista 1</li>
@@ -16,9 +18,10 @@
 </ul>
 </div>
 
-<button class="botao" onclick="clicou()">Adicionar item a lista</button>
 
 
-<script src="script.js"></script>
+
+
+<script src="script2.js"></script>
 </body>
 </html>
